--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-
+"homepage": "https://medazd0.github.io/ensaaProj" ,
 
   "name": "test",
 
@@ -61,7 +61,11 @@
     "test": "react-scripts test",
 
 
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+    "predeploy": "npm run build",
+
+     "deploy": "gh-pages -d build"
 
 
   },
